style.css
/* ... */
*,
*::after,
*::before {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}
.clearfix::after {
    content: "";
    display: table;
    clear: both;
}
html {
    font-size: 100%;
}

/* fonts */

@font-face {
    font-family: "AvenirNext";
    src: url("./fonts/AvenirNextCyr-Regular.eot"); /* IE9 Compat Modes */
    src: url("./fonts/AvenirNextCyr-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
      url("./fonts/AvenirNextCyr-Regular.otf") format("opentype"), /* Open Type Font */
      url("./fonts/AvenirNextCyr-Regular.svg") format("svg"), /* Legacy iOS */
      url("./fonts/AvenirNextCyr-Regular.ttf") format("truetype"), /* Safari, Android, iOS */
      url("./fonts/AvenirNextCyr-Regular.woff") format("woff"), /* Modern Browsers */
      url("./fonts/AvenirNextCyr-Regular.woff2") format("woff2"); /* Modern Browsers */
    font-weight: 400;
    font-style: normal;
  }


  @font-face {
    font-family: "AvenirNext";
    src: url("./fonts/AvenirNextCyr-Demi.eot"); /* IE9 Compat Modes */
    src: url("./fonts/AvenirNextCyr-Demi.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
      url("./fonts/AvenirNextCyr-Demi.otf") format("opentype"), /* Open Type Font */
      url("./fonts/AvenirNextCyr-Demi.svg") format("svg"), /* Legacy iOS */
      url("./fonts/AvenirNextCyr-Demi.ttf") format("truetype"), /* Safari, Android, iOS */
      url("./fonts/AvenirNextCyr-Demi.woff") format("woff"), /* Modern Browsers */
      url("./fonts/AvenirNextCyr-Demi.woff2") format("woff2"); /* Modern Browsers */
    font-weight: 600;
    font-style: normal;
  }


  @font-face {
    font-family: "AvenirNext";
    src: url("./fonts/AvenirNextCyr-Bold.eot"); /* IE9 Compat Modes */
    src: url("./fonts/AvenirNextCyr-Bold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
      url("./fonts/AvenirNextCyr-Bold.otf") format("opentype"), /* Open Type Font */
      url("./fonts/AvenirNextCyr-Bold.svg") format("svg"), /* Legacy iOS */
      url("./fonts/AvenirNextCyr-Bold.ttf") format("truetype"), /* Safari, Android, iOS */
      url("./fonts/AvenirNextCyr-Bold.woff") format("woff"), /* Modern Browsers */
      url("./fonts/AvenirNextCyr-Bold.woff2") format("woff2"); /* Modern Browsers */
    font-weight: 700;
    font-style: normal;
  }

/* fonts */




body {
    font-family: 'AvenirNext', sans-serif;
    font-weight: 400;
    color: #000;
    margin: 0;
}
.page__row{
    margin: 0 auto;
    max-width: 1920px;
    overflow: hidden;
}
.page__row.aboutus__wrap {
    overflow: visible;
}
.page__cell{
    margin: 0 auto;
    padding: 0 40px;
    max-width: 1630px;
}
.page__cell.posRel {
    position: relative;
}
.img{
    width: 100%;
}
a{
    text-decoration: none;
}
.header{
    width: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    margin-top: 5rem;
}
.header {
    padding: 0!important;
}
.header__logo{
    width: 11.375rem;
}
.page__cell-content{
    width: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
}
.page__cell-tablet{
    display: none;
}
.content__left{
    width: 36.25rem;
}
.content__left-headline{
    font-size: 4.3125rem;
    text-transform: uppercase;
    letter-spacing: 0.05em;
    line-height: 1;
    text-align: left;
}
.content__left-headline span{
    font-size: 5.375rem;
    letter-spacing: 0.13em;
    font-weight: 700;
}
.content__left-btn{
    margin-top: 1.5rem;
}
.content__right{
    width: 60rem;
}
.content__right-img{
    width: 100%;
}
.button {
    position: relative;
    display: inline-block;
    border-radius: 7px;
    background-color: #f20000;
    -webkit-box-shadow: 0 4px 17px 0 rgba(233, 0, 0, 0.35);
            box-shadow: 0 4px 17px 0 rgba(233, 0, 0, 0.35);
    width: 18.75rem;
    height: 4.1875rem;
    overflow: hidden;
    -webkit-transition: 0.4s;
    -o-transition: 0.4s;
    transition: 0.4s;
}
.front-btn{
    display: block;
    margin: 0 auto;
    font-size: 1.625rem;
    font-weight: 300;
    color: #fff;
    text-transform: uppercase;
    line-height: 2.6;
    letter-spacing: 0.2em;
    text-align: center;
    -webkit-transition: 0.2s;
    -o-transition: 0.2s;
    transition: 0.2s;
}
.back-btn{
    margin: 0 auto;
    font-size: 1.625rem;
    font-weight: 700;
    color: #f20000;
    text-shadow: 0 0 10px #f20000;
    text-transform: uppercase;
    line-height: 2.6;
    letter-spacing: 0.2em;
    text-align: center;
    -webkit-transition: 0.2s;
    -o-transition: 0.2s;
    transition: 0.2s;
    display: none;
}
.button__line {
    position: absolute;
    display: block;
}
.button__line--top {
    top: 0;
    left: -100%;
    width: 100%;
    height: 2px;
    background: -o-linear-gradient(left, transparent, #f20000);
    background: -webkit-gradient(linear, left top, right top, from(transparent), to(#f20000));
    background: linear-gradient(90deg, transparent, #f20000);
}
.button:hover .button__line--top {
    left: 100%;
    -webkit-transition: 1s;
    -o-transition: 1s;
    transition: 1s;
    -webkit-transition-delay: 0.25s;
         -o-transition-delay: 0.25s;
            transition-delay: 0.25s;
}
.button:hover .button__line--top {
    left: 100%;
    -webkit-transition: 1s;
    -o-transition: 1s;
    transition: 1s;
    -webkit-transition-delay: 0.25s;
         -o-transition-delay: 0.25s;
            transition-delay: 0.25s;
}
/* ... */

